Cycles -- OSL Script -- Displacement does not update when pressing "Script Node Update" #63415

Closed
opened 2019-04-09 09:55:03 +02:00 by Nis Wegmann · 4 comments

System Information
Operating system: Darwin-18.5.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon R9 M290X OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.8.38

Blender Version
Broken: version: 2.80 (sub 53), branch: blender2.7, commit date: 2019-03-31 21:52, hash: b936d7b16c
Worked: (optional)

Short description of error

When using OSL for controlling displacement nodes, pressing "Script Node Update" does not trigger displacement to be updated.

Exact steps for others to reproduce the error

Create an OSL script. Load it with a script node in the e shader editor. Connect one of the outputs to a displacement node (see the attached image). Change the script and press "Script Node Update". Nothing happens, i.e. the displacement is not updated.

I've attached a .blend-file that demonstrates the issue.

screenshot.png
Cycles -- OSL Script -- Displacement does not update when pressing "Script Node Update".zip

**System Information** Operating system: Darwin-18.5.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon R9 M290X OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.8.38 **Blender Version** Broken: version: 2.80 (sub 53), branch: blender2.7, commit date: 2019-03-31 21:52, hash: `b936d7b16c` Worked: (optional) **Short description of error** When using OSL for controlling displacement nodes, pressing "Script Node Update" does not trigger displacement to be updated. **Exact steps for others to reproduce the error** Create an OSL script. Load it with a script node in the e shader editor. Connect one of the outputs to a displacement node (see the attached image). Change the script and press "Script Node Update". Nothing happens, i.e. the displacement is not updated. I've attached a .blend-file that demonstrates the issue. ![screenshot.png](https://archive.blender.org/developer/F6921384/screenshot.png) [Cycles -- OSL Script -- Displacement does not update when pressing "Script Node Update".zip](https://archive.blender.org/developer/F6921386/Cycles_--_OSL_Script_--__Displacement_does_not_update_when_pressing__Script_Node_Update_.zip)
Author

Added subscriber: @nis

Added subscriber: @nis

This issue was referenced by blender/cycles@5fdcbd530a

This issue was referenced by blender/cycles@5fdcbd530a921b98a217d7c6cee111b6cb67e960

This issue was referenced by 543614a17d

This issue was referenced by 543614a17d235ad6bf09a4cc82969bf92f16e1de

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63415
No description provided.