Fix T63415: no Cycles displacement update when updating OSL code